# neuro-skill

./: .gitignore  README.md  extras_template.py  pyproject.toml  query_skill.py
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
extras/: extras_ecc.py
neuro_skill/: __init__.py  auto_build.py  auto_features.py  autostart.py  base_features.py  cli.py  codegraph_bridge.py  feature_merger.py  features.py  feedback.py  index.py  mcp_server.py  parser.py  personalize.py  planner.py  router.py  routers.py  server.py  tech_research.py  typed_graph.py  watcher.py
neuro_skill/plugins/hermes/: __init__.py  plugin.yaml  test_router.py
scripts/: skill_vetter_scan.py
tests/: test_benchmark.py  test_edge.py  test_features.py  test_feedback.py  test_index.py  test_perf.py  test_planner.py  test_routers.py  test_typed_graph.py
